@@ -12,7 +12,7 @@
 336,1	//WE_CALLPARTNER
 366,1	//HW_MAGICPOWER
 370,1	//CH_PALMSTRIKE
-403,1	//PF_MEMORIZE
+403,3	//PF_MEMORIZE
 408,1	//WE_BABY
 409,1	//WE_CALLPARENT
 410,1	//WE_CALLBABY
